- TWEAK: Header Builder — Improve header menu javascript to support full width Mega Menu (available since Suki Pro v1.2).
- TWEAK: Social Icons — Update some existing social icons.
- TWEAK: Social Icons — Add hidden label on each social icon for better accessibility.
- TWEAK: Social Icons — Remove Google+.
- TWEAK: Google Fonts — Update Google Fonts list.
- TWEAK: WooCommerce — Improve mini cart widget's buttons CSS (make each button full width for better compatibility with longer text in non-english languages).
- TWEAK: Customizer — Improve Customizer UI & UX.
- TWEAK: Theme Dashboard — Improve theme dashboard layout for better compatibility with Suki Pro's White Label module. Now user won't see "pro" badges and links to our website on the modules manager.
- FIX: Header — Shopping cart dropdown toggle does nothing on Cart and Checkout pages. Now it works like a link to the Cart page.
- FIX: WooCommerce — "My Account" page's navigation links color doesn't follow the global link color configured in Customizer.

v1.2.11
- FIX: WooCommerce cart's cross sells hiding option bug when using 2 columns layout.
- FIX: WooCommerce quantity increment button's Javascript for better compatibility with 3rd party plugins.
- FIX: WooCommerce products grid's AJAX add to cart loading button CSS.
- FIX: Remove bottom border on WooCommerce's cart table when on mobile view.

v1.2.10
- TWEAK: Improve mobile header dropdown behavior: clicking the menu link will also open the dropdown.
- FIX: Mobile header dropdown bug from v1.2.9.

v1.2.9
- FIX: WooCommerce cart's cross sells hiding option.
- FIX: WooCommerce product's gallery and summary width CSS.
- FIX: Border radius on "toggle buttons".
- FIX: Javascript error in IE 11 browser.
- FIX: Click event handler of non link elements on older Mobile Safari browser.

v1.2.8
- TWEAK: Improve WooCommerce product CSS.
- FIX: Elementor Pro's Theme Builder compatibility bug.

v1.2.7
- TWEAK: Improve Gutenberg editor CSS.